infrastructure/kustomize/www/local/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: www
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    # Replace with your domain
    # You can use sslip.io for testing
    - host: www.k8s.orb.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: www
                port:
                  number: 3000
